# static-late-interaction

./: distill_colbert.py  evaluate.py  inference.py  inference_colbert.py  pyproject.toml
m2v_model/: README.md  config.json  tokenizer.json
